Fill in Event Templates

--- a/index.html
+++ b/index.html
@@ -26,16 +26,16 @@
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Art Memory</a>
                         <ul class="dropdown-menu">
-                          <li><a class="dropdown-item" href="Art Memory -- 4,5.html">Art Memory -- 4,5</a></li>
-                          <li><a class="dropdown-item" href="Art Memory -- 6,7,8.html">Art Memory -- 6,7,8</a></li>
+                          <li><a class="nav-link" href="Art Memory -- 4,5.html">Art Memory -- 4,5</a></li>
+                          <li><a class="nav-link" href="Art Memory -- 6,7,8.html">Art Memory -- 6,7,8</a></li>
                         </ul>
                     </li>                  
-                    <li><a class="nav-link disabled" href="Calculator Applications -- 6,7,8.html">Calculator Applications -- 6,7,8</a></li>
+                    <li><a class="nav-link" href="Calculator Applications -- 6,7,8.html">Calculator Applications -- 6,7,8</a></li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link disabled dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Creative Writing</a>
+                        <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Creative Writing</a>
                         <ul class="dropdown-menu">
-                            <li><a class="nav-link disabled" href="Creative Writing -- 1.html">Creative Writing -- 1</a></li>
-                            <li><a class="nav-link disabled" href="Creative Writing -- 2.html">Creative Writing -- 2</a></li>
+                            <li><a class="nav-link" href="Creative Writing -- 1.html">Creative Writing -- 1</a></li>
+                            <li><a class="nav-link" href="Creative Writing -- 2.html">Creative Writing -- 2</a></li>
                         </ul>
                     </li> 
                     <li class="nav-item dropdown">
@@ -61,19 +61,11 @@
                             <li><a class="nav-link disabled" href="Listening Skills -- 6,7,8.html">Listening Skills -- 6,7,8</a></li>
                         </ul>
                     </li> 
-
-                    <li class="nav-item dropdown">
-                        <a class="nav-link disabled dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Dictionary Skills</a>
-                        <ul class="dropdown-menu">
-                            <li><a class="nav-link disabled" href="Dictionary Skills -- 4,5.html">Dictionary Skills -- 4,5</a></li>
-                            <li><a class="nav-link disabled" href="Dictionary Skills -- 6,7,8.html">Dictionary Skills -- 6,7,8</a></li>
-                        </ul>
-                    </li> 
  
                     <li class="nav-item dropdown">
-                        <a class="nav-link disabled dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Maps, Graphs, and Charts</a>
+                        <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Maps, Graphs, and Charts</a>
                         <ul class="dropdown-menu">
-                            <li><a class="nav-link disabled" href="Maps, Graphs, and Charts -- 4.html">Maps, Graphs, and Charts -- 4</a></li>
+                            <li><a class="nav-link" href="Maps, Graphs, and Charts -- 4.html">Maps, Graphs, and Charts -- 4</a></li>
                             <li><a class="nav-link disabled" href="Maps, Graphs, and Charts -- 5.html">Maps, Graphs, and Charts -- 5</a></li>
                             <li><a class="nav-link disabled" href="Maps, Graphs, and Charts -- 6.html">Maps, Graphs, and Charts -- 6</a></li>
                             <li><a class="nav-link disabled" href="Maps, Graphs, and Charts -- 7.html">Maps, Graphs, and Charts -- 7</a></li>
@@ -82,7 +74,7 @@
                     </li> 
 
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Mathematics</a>
+                        <a class="nav-link disabled dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Mathematics</a>
                         <ul class="dropdown-menu">
                             <li><a class="nav-link disabled" href="Mathematics -- 2.html">Mathematics -- 2</a></li>
                             <li><a class="nav-link disabled" href="Mathematics -- 3.html">Mathematics -- 3</a></li>
