All Results entered

--- a/Maps, Graphs, and Charts -- 5.html
+++ b/Maps, Graphs, and Charts -- 5.html
@@ -22,8 +22,15 @@
         <table class="table table-primary table-striped table-bordered border-primary" border="3">
             <tbody>
                 <!-- Add Table entries here -->
-
-                                     
+                <tr><th>Rank</th><th>Name</th><th>School</th><th>StateQualifer</th></tr>
+                <tr><td>1</td><td>Nolan Peters / 150</td><td>Regents</td><td>STATE QUALIFIER</td></tr>
+                <tr><td>2</td><td>Amanda Tavares / 130</td><td>St. Theresa</td><td>STATE QUALIFIER</td></tr>
+                <tr><td>3</td><td>Peyton Cunningham / 112</td><td>Regents</td><td></td></tr>
+                <tr><td>4</td><td>Alina Fang / 109</td><td>St. Gabriels</td><td></td></tr>
+                <tr><td>5</td><td>Noah Dolieslager / 101</td><td>Hyde Park Schools</td><td></td></tr>
+                <tr><td>6</td><td>Ainsley Jones / 95</td><td>St. Andrews</td><td></td></tr>
+                <tr><td>7</td><td>Rowan Marek / 40</td><td>Hyde Park Schools</td><td></td></tr>
+                                                    
             </tbody>
         </table>
         <a class="btn btn-primary" href="index.html" role="button">Return to PSIA Home Page</a>
