--- a/Mathematics -- 3.html
+++ b/Mathematics -- 3.html
@@ -22,8 +22,18 @@
         <table class="table table-primary table-striped table-bordered border-primary" border="3">
             <tbody>
                 <!-- Add Table entries here -->
-
-                                     
+                <tr><th>Rank</th><th>Name</th><th>School</th><th>StateQualifer</th></tr>
+                <tr><td>1</td><td>Beckham Chodniewicz / 183</td><td>Regents</td><td>STATE QUALIFIER</td></tr>
+                <tr><td>2</td><td>Dylan Whitchurch / 151</td><td>Trinity</td><td></td></tr>
+                <tr><td>3</td><td>Henry Newby / 139</td><td>Trinity</td><td></td></tr>
+                <tr><td>4</td><td>Larsen de Waal / 122</td><td>St. Gabriels</td><td></td></tr>
+                <tr><td>5</td><td>Andrew Piccolo / 110</td><td>St. Gabriels</td><td></td></tr>
+                <tr><td>6</td><td>Matthew Engesser / 99</td><td>St. Theresa</td><td></td></tr>
+                <tr><td>7</td><td>Carter Barnwell / 73</td><td>St. Andrews</td><td></td></tr>
+                <tr><td>8</td><td>Evan Barton / 72</td><td>St. Gabriels</td><td></td></tr>
+                <tr><td>9</td><td>Anita Vemulapalli / 70</td><td>St. Andrews</td><td></td></tr>
+                <tr><td>10</td><td>Alyssa Tavares / 66</td><td>St. Theresa</td><td></td></tr>
+                                                    
             </tbody>
         </table>
         <a class="btn btn-primary" href="index.html" role="button">Return to PSIA Home Page</a>
