--- a/Mathematics -- 5.html
+++ b/Mathematics -- 5.html
@@ -22,8 +22,19 @@
         <table class="table table-primary table-striped table-bordered border-primary" border="3">
             <tbody>
                 <!-- Add Table entries here -->
-
-                                     
+                <tr><th>Rank</th><th>Name</th><th>School</th><th>StateQualifer</th></tr>
+                <tr><td>1</td><td>Kylie Liu / 157</td><td>Liu Home</td><td>STATE QUALIFIER</td></tr>
+                <tr><td>2</td><td>Julia Ridgeway / 135</td><td>St. Theresa</td><td>STATE QUALIFIER</td></tr>
+                <tr><td>3</td><td>Levi Tvrdik / 129</td><td>Regents</td><td></td></tr>
+                <tr><td>4</td><td>Eleanor Thome / 93</td><td>St. Gabriels</td><td></td></tr>
+                <tr><td>5</td><td>Tyre Buttross / 82</td><td>St. Gabriels</td><td></td></tr>
+                <tr><td>6</td><td>Amanda Tavares / 78</td><td>St. Theresa</td><td></td></tr>
+                <tr><td>7</td><td>John Peters / 66</td><td>Hyde Park Schools</td><td></td></tr>
+                <tr><td>8</td><td>Nolan Peters / 62</td><td>Regents</td><td></td></tr>
+                <tr><td>9</td><td>Alina Fang / 55</td><td>St. Gabriels</td><td></td></tr>
+                <tr><td>10 TIE</td><td>Charlotte Cone / 53</td><td>Hyde Park Schools</td><td></td></tr>
+                <tr><td>10 TIE</td><td>Noah Dolieslager / 53</td><td>Hyde Park Schools</td><td></td></tr>
+                                                    
             </tbody>
         </table>
         <a class="btn btn-primary" href="index.html" role="button">Return to PSIA Home Page</a>
