--- a/Mathematics -- 8.html
+++ b/Mathematics -- 8.html
@@ -22,8 +22,14 @@
         <table class="table table-primary table-striped table-bordered border-primary" border="3">
             <tbody>
                 <!-- Add Table entries here -->
-
-                                     
+                <tr><th>Rank</th><th>Name</th><th>School</th><th>StateQualifer</th></tr>
+                <tr><td>1</td><td>Joseph Ronchetti / 235</td><td>Regents</td><td>STATE QUALIFIER</td></tr>
+                <tr><td>2</td><td>Adrian Ching / 127</td><td>Regents</td><td>STATE QUALIFIER</td></tr>
+                <tr><td>3</td><td>Katherine White / 95</td><td>St. Theresa</td><td></td></tr>
+                <tr><td>4</td><td>Ella Gonzalez / 62</td><td>St. Theresa</td><td></td></tr>
+                <tr><td>5</td><td>Tyler Jones / 37</td><td>St. Theresa</td><td></td></tr>
+                <tr><td>6</td><td>Anna Wayne / 22</td><td>St. Andrews</td><td></td></tr>
+                                                    
             </tbody>
         </table>
         <a class="btn btn-primary" href="index.html" role="button">Return to PSIA Home Page</a>
