--- a/Spelling -- 2.html
+++ b/Spelling -- 2.html
@@ -22,8 +22,16 @@
         <table class="table table-primary table-striped table-bordered border-primary" border="3">
             <tbody>
                 <!-- Add Table entries here -->
-
-                                     
+                <tr><th>Rank</th><th>Name</th><th>School</th><th>StateQualifer</th></tr>
+                <tr><td>1</td><td>Wyatt Moles / 250</td><td>St. Theresa</td><td>STATE QUALIFIER</td></tr>
+                <tr><td>2</td><td>Nathan Smalley / 186</td><td>Regents</td><td>STATE QUALIFIER</td></tr>
+                <tr><td>3</td><td>William Zboril / 157</td><td>St. Gabriels</td><td></td></tr>
+                <tr><td>4</td><td>Mallory Fults / 141</td><td>St. Gabriels</td><td></td></tr>
+                <tr><td>5</td><td>Amina Reaves / 122</td><td>Trinity</td><td></td></tr>
+                <tr><td>6</td><td>Ryan Kantor / 121</td><td>St. Gabriels</td><td></td></tr>
+                <tr><td>7</td><td>Reagan Loeffler / 68</td><td>St. Theresa</td><td></td></tr>
+                <tr><td>8</td><td>Nalin Nakra / 25</td><td>Trinity</td><td></td></tr>
+                                                    
             </tbody>
         </table>
         <a class="btn btn-primary" href="index.html" role="button">Return to PSIA Home Page</a>
