--- a/Spelling -- 5.html
+++ b/Spelling -- 5.html
@@ -22,8 +22,18 @@
         <table class="table table-primary table-striped table-bordered border-primary" border="3">
             <tbody>
                 <!-- Add Table entries here -->
-
-                                     
+                <tr><th>Rank</th><th>Name</th><th>School</th><th>StateQualifer</th></tr>
+                <tr><td>1</td><td>Kylie Liu / 373</td><td>Liu Home</td><td>STATE QUALIFIER</td></tr>
+                <tr><td>2</td><td>Anjali Adusumalli / 356</td><td>Trinity</td><td>STATE QUALIFIER</td></tr>
+                <tr><td>3</td><td>Julia Ridgeway / 322</td><td>St. Theresa</td><td></td></tr>
+                <tr><td>4</td><td>Luke Irion / 303</td><td>St. Theresa</td><td></td></tr>
+                <tr><td>5</td><td>Adelynn Zimmerman / 301</td><td>St. Andrews</td><td></td></tr>
+                <tr><td>6</td><td>Noah Dolieslager / 226</td><td>Hyde Park Schools</td><td></td></tr>
+                <tr><td>7</td><td>Ainsley Jones / 210</td><td>St. Andrews</td><td></td></tr>
+                <tr><td>8</td><td>Truman Gottschalk / 131</td><td>Regents</td><td></td></tr>
+                <tr><td>9</td><td>Alina Fang / 91</td><td>St. Gabriels</td><td></td></tr>
+                <tr><td>10</td><td>John Michael Hubik / 10</td><td>St. Theresa</td><td></td></tr>
+                                                    
             </tbody>
         </table>
         <a class="btn btn-primary" href="index.html" role="button">Return to PSIA Home Page</a>
