--- a/Vocabulary -- 5.html
+++ b/Vocabulary -- 5.html
@@ -22,8 +22,13 @@
         <table class="table table-primary table-striped table-bordered border-primary" border="3">
             <tbody>
                 <!-- Add Table entries here -->
-
-                                     
+                <tr><th>Rank</th><th>Name</th><th>School</th><th>StateQualifer</th></tr>
+                <tr><td>1</td><td>Kylie Liu / 129</td><td>Liu Home</td><td>STATE QUALIFIER</td></tr>
+                <tr><td>2</td><td>John Michael Hubik / 52</td><td>St. Theresa</td><td>STATE QUALIFIER</td></tr>
+                <tr><td>3</td><td>Emma Urrutia / 45</td><td>St. Theresa</td><td></td></tr>
+                <tr><td>4</td><td>Caroline Castaldi / 22</td><td>St. Theresa</td><td></td></tr>
+                <tr><td>5</td><td>Louisa Dorrell / 21</td><td>St. Andrews</td><td></td></tr>
+                                                    
             </tbody>
         </table>
         <a class="btn btn-primary" href="index.html" role="button">Return to PSIA Home Page</a>
