--- a/Calculator Applications -- 6,7,8.html
+++ b/Calculator Applications -- 6,7,8.html
@@ -22,8 +22,11 @@
         <table class="table table-primary table-striped table-bordered border-primary" border="3">
             <tbody>
                 <!-- Add Table entries here -->
-
-                                     
+                <tr><th>Rank</th><th>Name</th><th>School</th><th>StateQualifer</th></tr>
+                <tr><td>1</td><td>Emily Fletcher / 189</td><td>St. Theresa</td><td>STATE QUALIFIER</td></tr>
+                <tr><td>2</td><td>Stella Li / 124</td><td>St. Theresa</td><td>STATE QUALIFIER</td></tr>
+                <tr><td>3</td><td>Ryan Mcdonald / 111</td><td>St. Theresa</td><td></td></tr>
+                <tr><td>4</td><td>Paul Berend / -43</td><td>St. Louis</td><td></td></tr>                                     
             </tbody>
         </table>
         <a class="btn btn-primary" href="index.html" role="button">Return to PSIA Home Page</a>
