--- a/Creative Writing -- 1.html
+++ b/Creative Writing -- 1.html
@@ -22,7 +22,17 @@
         <table class="table table-primary table-striped table-bordered border-primary" border="3">
             <tbody>
                 <!-- Add Table entries here -->
-
+                <tr><th>Rank</th><th>Name</th><th>School</th><th>StateQualifer</th></tr>
+                <tr><td>1</td><td>Matthew Wong</td><td>St. Gabriels</td><td>STATE QUALIFIER</td></tr>
+                <tr><td>2</td><td>Sarah Dartt</td><td>St. Gabriels</td><td></td></tr>
+                <tr><td>3</td><td>Miles de Waal</td><td>St. Gabriels</td><td></td></tr>
+                <tr><td>4</td><td>Grace Connett</td><td>St. Theresa</td><td></td></tr>
+                <tr><td>5</td><td>Ember Magnuson</td><td>Regents</td><td></td></tr>
+                <tr><td>6</td><td>Alex Garcia</td><td>St. Theresa</td><td></td></tr>
+                <tr><td>7</td><td>Allison Hanners</td><td>St. Andrews</td><td></td></tr>
+                <tr><td>8</td><td>Tatiana Barker-meador</td><td>St. Andrews</td><td></td></tr>
+                <tr><td>9</td><td>Elias Ferng</td><td>St. Andrews</td><td></td></tr>
+                <tr><td>10</td><td>Emma Sevey</td><td>St. Theresa</td><td></td></tr>                
                                      
             </tbody>
         </table>
