--- a/Creative Writing -- 2.html
+++ b/Creative Writing -- 2.html
@@ -22,7 +22,17 @@
         <table class="table table-primary table-striped table-bordered border-primary" border="3">
             <tbody>
                 <!-- Add Table entries here -->
-
+                <tr><th>Rank</th><th>Name</th><th>School</th><th>StateQualifer</th></tr>
+                <tr><td>1</td><td>Kendall Owen</td><td>Regents</td><td>STATE QUALIFIER</td></tr>
+                <tr><td>2</td><td>Nora Dennis</td><td>Regents</td><td></td></tr>
+                <tr><td>3</td><td>Lily Hill</td><td>St. Theresa</td><td></td></tr>
+                <tr><td>4</td><td>Beatrice Dixon</td><td>St. Andrews</td><td></td></tr>
+                <tr><td>5</td><td>Henry Mckenna</td><td>St. Gabriels</td><td></td></tr>
+                <tr><td>6</td><td>Liam Foster</td><td>St. Gabriels</td><td></td></tr>
+                <tr><td>7</td><td>Pierce Curry</td><td>St. Andrews</td><td></td></tr>
+                <tr><td>8</td><td>Ivy Curry</td><td>St. Andrews</td><td></td></tr>
+                <tr><td>9</td><td>Aker Day</td><td>St. Theresa</td><td></td></tr>
+                <tr><td>10</td><td>Amina Reaves</td><td>Trinity</td><td></td></tr>                
                                      
             </tbody>
         </table>
