--- a/Dictionary Skills -- 4,5.html
+++ b/Dictionary Skills -- 4,5.html
@@ -22,7 +22,12 @@
         <table class="table table-primary table-striped table-bordered border-primary" border="3">
             <tbody>
                 <!-- Add Table entries here -->
-
+                <tr><th>Rank</th><th>Name</th><th>School</th><th>StateQualifer</th></tr>
+                <tr><td>1</td><td>Ariana Cruz / 56</td><td>St. Theresa</td><td>STATE QUALIFIER</td></tr>
+                <tr><td>2</td><td>Jackson Shilling / 48</td><td>St. Theresa</td><td>STATE QUALIFIER</td></tr>
+                <tr><td>3</td><td>Anne Adams / 33</td><td>Regents</td><td></td></tr>
+                <tr><td>4</td><td>Olivia Rodriguez / 28</td><td>St. Theresa</td><td></td></tr>
+                <tr><td>5</td><td>Hannah Parks / -13</td><td>St. Theresa</td><td></td></tr>                
                                      
             </tbody>
         </table>
