--- a/Dictionary Skills -- 6,7,8.html
+++ b/Dictionary Skills -- 6,7,8.html
@@ -22,7 +22,14 @@
         <table class="table table-primary table-striped table-bordered border-primary" border="3">
             <tbody>
                 <!-- Add Table entries here -->
-
+                <tr><th>Rank</th><th>Name</th><th>School</th><th>StateQualifer</th></tr>
+                <tr><td>1</td><td>Emily Fletcher / 105</td><td>St. Theresa</td><td>STATE QUALIFIER</td></tr>
+                <tr><td>2 TIE</td><td>Gabby Vergara / 75</td><td>St. Theresa</td><td>STATE QUALIFIER</td></tr>
+                <tr><td>2 TIE</td><td>Sebastian Cruz / 75</td><td>St. Theresa</td><td>STATE QUALIFIER</td></tr>
+                <tr><td>4</td><td>Logan Gonzalez / 53</td><td>St. Theresa</td><td></td></tr>
+                <tr><td>5</td><td>Josephine Addison / 41</td><td>St. Theresa</td><td></td></tr>
+                <tr><td>6 TIE</td><td>Caroline Masterson / 16</td><td>Trinity</td><td></td></tr>
+                <tr><td>6 TIE</td><td>Henry Parks / 16</td><td>St. Theresa</td><td></td></tr>                
                                      
             </tbody>
         </table>
