--- a/Impromptu Speaking -- 7,8.html
+++ b/Impromptu Speaking -- 7,8.html
@@ -22,7 +22,16 @@
         <table class="table table-primary table-striped table-bordered border-primary" border="3">
             <tbody>
                 <!-- Add Table entries here -->
-
+                <tr><th>Rank</th><th>Name</th><th>School</th><th>StateQualifer</th></tr>
+                <tr><td>1</td><td>Ainsley Owen</td><td>Regents</td><td>STATE QUALIFIER</td></tr>
+                <tr><td>2</td><td>Olivia Hanson</td><td>Regents</td><td>STATE QUALIFIER</td></tr>
+                <tr><td>3</td><td>Jacob Govea</td><td>Regents</td><td></td></tr>
+                <tr><td>4</td><td>Carys Gottschalk</td><td>Regents</td><td></td></tr>
+                <tr><td>5</td><td>Patrick Hubert</td><td>St. Theresa</td><td></td></tr>
+                <tr><td>6</td><td>Yash Date</td><td>Trinity</td><td></td></tr>
+                <tr><td>7</td><td>Tyler Jones</td><td>St. Theresa</td><td></td></tr>
+                <tr><td>8</td><td>Gabriel Coker</td><td>Regents</td><td></td></tr>
+                
                                      
             </tbody>
         </table>
