--- a/Information Skills -- 5,6.html
+++ b/Information Skills -- 5,6.html
@@ -22,7 +22,12 @@
         <table class="table table-primary table-striped table-bordered border-primary" border="3">
             <tbody>
                 <!-- Add Table entries here -->
-
+                <tr><th>Rank</th><th>Name</th><th>School</th><th>StateQualifer</th></tr>
+                <tr><td>1</td><td>Elena Franta / 90</td><td>Regents</td><td>STATE QUALIFIER</td></tr>
+                <tr><td>2</td><td>Olyvia Jones / 80</td><td>St. Theresa</td><td>STATE QUALIFIER</td></tr>
+                <tr><td>3</td><td>Amanda Tavares / 75</td><td>St. Theresa</td><td></td></tr>
+                <tr><td>4</td><td>Damian Davis / 55</td><td>Regents</td><td></td></tr>
+                <tr><td>5</td><td>Emma Urrutia / 0</td><td>St. Theresa</td><td></td></tr>                
                                      
             </tbody>
         </table>
