--- a/Information Skills -- 7,8.html
+++ b/Information Skills -- 7,8.html
@@ -22,7 +22,15 @@
         <table class="table table-primary table-striped table-bordered border-primary" border="3">
             <tbody>
                 <!-- Add Table entries here -->
-
+                <tr><th>Rank</th><th>Name</th><th>School</th><th>StateQualifer</th></tr>
+                <tr><td>1 TIE</td><td>Emily Fletcher / 105</td><td>St. Theresa</td><td>STATE QUALIFIER</td></tr>
+                <tr><td>1 TIE</td><td>Keri Collins / 105</td><td>Regents</td><td>STATE QUALIFIER</td></tr>
+                <tr><td>3 TIE</td><td>Joseph Ronchetti / 90</td><td>Regents</td><td></td></tr>
+                <tr><td>3 TIE</td><td>Zara Franta / 90</td><td>Regents</td><td></td></tr>
+                <tr><td>5 TIE</td><td>Matti Schaelicke / 75</td><td>St. Theresa</td><td></td></tr>
+                <tr><td>5 TIE</td><td>Ryan Mcdonald / 75</td><td>St. Theresa</td><td></td></tr>
+                <tr><td>7</td><td>Andrew Rosen / 65</td><td>St. Theresa</td><td></td></tr>
+                <tr><td>8</td><td>Tyler Jones / 30</td><td>St. Theresa</td><td></td></tr>                
                                      
             </tbody>
         </table>
