--- a/Listening Skills -- 6,7,8.html
+++ b/Listening Skills -- 6,7,8.html
@@ -22,7 +22,17 @@
         <table class="table table-primary table-striped table-bordered border-primary" border="3">
             <tbody>
                 <!-- Add Table entries here -->
-
+                <tr><th>Rank</th><th>Name</th><th>School</th><th>StateQualifer</th></tr>
+                <tr><td>1</td><td>Ryan Mcdonald / 143</td><td>St. Theresa</td><td>STATE QUALIFIER</td></tr>
+                <tr><td>2</td><td>Sydney Archer / 136</td><td>St. Theresa</td><td>STATE QUALIFIER</td></tr>
+                <tr><td>3</td><td>Bridget Baile / 112</td><td>St. Theresa</td><td></td></tr>
+                <tr><td>4</td><td>Josephine Addison / 111</td><td>St. Theresa</td><td></td></tr>
+                <tr><td>5 TIE</td><td>Ella Gonzalez / 87</td><td>St. Theresa</td><td></td></tr>
+                <tr><td>5 TIE</td><td>Keri Collins / 87</td><td>Regents</td><td></td></tr>
+                <tr><td>7</td><td>Gabby Vergara / 72</td><td>St. Theresa</td><td></td></tr>
+                <tr><td>8</td><td>Ella Stewart / 66</td><td>St. Theresa</td><td></td></tr>
+                <tr><td>9</td><td>Nicholas Shilling / 64</td><td>St. Theresa</td><td></td></tr>
+                <tr><td>10</td><td>Carys Gottschalk / 43</td><td>Regents</td><td></td></tr>                
                                      
             </tbody>
         </table>
