--- a/Maps, Graphs, and Charts -- 4.html
+++ b/Maps, Graphs, and Charts -- 4.html
@@ -22,7 +22,13 @@
         <table class="table table-primary table-striped table-bordered border-primary" border="3">
             <tbody>
                 <!-- Add Table entries here -->
-
+                <tr><th>Rank</th><th>Name</th><th>School</th><th>StateQualifer</th></tr>
+                <tr><td>1</td><td>Jp Hudson / 105</td><td>St. Andrews</td><td>STATE QUALIFIER</td></tr>
+                <tr><td>2</td><td>Edmund Xie / 104</td><td>St. Andrews</td><td>STATE QUALIFIER</td></tr>
+                <tr><td>3</td><td>Anne Adams / 86</td><td>Regents</td><td></td></tr>
+                <tr><td>4</td><td>Trace Reagan / 75</td><td>Trinity</td><td></td></tr>
+                <tr><td>5</td><td>Mabry Peters / 68</td><td>Regents</td><td></td></tr>
+                <tr><td>6</td><td>Hannah Parks / 34</td><td>St. Theresa</td><td></td></tr>                
                                      
             </tbody>
         </table>
