--- a/Maps, Graphs, and Charts -- 7.html
+++ b/Maps, Graphs, and Charts -- 7.html
@@ -22,8 +22,13 @@
         <table class="table table-primary table-striped table-bordered border-primary" border="3">
             <tbody>
                 <!-- Add Table entries here -->
-
-                                     
+                <tr><th>Rank</th><th>Name</th><th>School</th><th>StateQualifer</th></tr>
+                <tr><td>1</td><td>Andrew Rosen / 240</td><td>St. Theresa</td><td>STATE QUALIFIER</td></tr>
+                <tr><td>2</td><td>Ryan Mcdonald / 196</td><td>St. Theresa</td><td>STATE QUALIFIER</td></tr>
+                <tr><td>3</td><td>Camden Peters / 172</td><td>Regents</td><td></td></tr>
+                <tr><td>4</td><td>Emmett Melton / 151</td><td>Hyde Park Schools</td><td></td></tr>
+                <tr><td>5</td><td>Jack Dolce / 129</td><td>St. Gabriels</td><td></td></tr>
+                                                    
             </tbody>
         </table>
         <a class="btn btn-primary" href="index.html" role="button">Return to PSIA Home Page</a>
