--- a/Mathematics -- 2.html
+++ b/Mathematics -- 2.html
@@ -22,8 +22,18 @@
         <table class="table table-primary table-striped table-bordered border-primary" border="3">
             <tbody>
                 <!-- Add Table entries here -->
-
-                                     
+                <tr><th>Rank</th><th>Name</th><th>School</th><th>StateQualifer</th></tr>
+                <tr><td>1</td><td>Liam Foster / 115</td><td>St. Gabriels</td><td>STATE QUALIFIER</td></tr>
+                <tr><td>2</td><td>Zain Bhiwandiwala / 75</td><td>St. Andrews</td><td></td></tr>
+                <tr><td>3</td><td>William Zboril / 71</td><td>St. Gabriels</td><td></td></tr>
+                <tr><td>4</td><td>Aker Day / 68</td><td>St. Theresa</td><td></td></tr>
+                <tr><td>5</td><td>A. J. Ramey / 55</td><td>Regents</td><td></td></tr>
+                <tr><td>6</td><td>Jack Kelley / 53</td><td>St. Gabriels</td><td></td></tr>
+                <tr><td>7</td><td>Amina Reaves / 52</td><td>Trinity</td><td></td></tr>
+                <tr><td>8</td><td>Caleb Wilkerson / 50</td><td>Regents</td><td></td></tr>
+                <tr><td>9</td><td>Pierce Curry / 43</td><td>St. Andrews</td><td></td></tr>
+                <tr><td>10</td><td>Ruby Evans / 38</td><td>Trinity</td><td></td></tr>
+                                                    
             </tbody>
         </table>
         <a class="btn btn-primary" href="index.html" role="button">Return to PSIA Home Page</a>
