--- a/Mathematics -- 4.html
+++ b/Mathematics -- 4.html
@@ -22,8 +22,18 @@
         <table class="table table-primary table-striped table-bordered border-primary" border="3">
             <tbody>
                 <!-- Add Table entries here -->
-
-                                     
+                <tr><th>Rank</th><th>Name</th><th>School</th><th>StateQualifer</th></tr>
+                <tr><td>1</td><td>Benjamin Choi / 168</td><td>St. Gabriels</td><td>STATE QUALIFIER</td></tr>
+                <tr><td>2</td><td>Ben Foster / 151</td><td>St. Gabriels</td><td>STATE QUALIFIER</td></tr>
+                <tr><td>3</td><td>Zoey Zhang / 110</td><td>Hyde Park Schools</td><td></td></tr>
+                <tr><td>4</td><td>Aadhya Karthik / 95</td><td>Karthik </td><td></td></tr>
+                <tr><td>5</td><td>Jack Conkling / 94</td><td>Hyde Park Schools</td><td></td></tr>
+                <tr><td>6</td><td>Nicholas Smith / 91</td><td>Regents</td><td></td></tr>
+                <tr><td>7</td><td>Nathan Hartadinata / 76</td><td>St. Theresa</td><td></td></tr>
+                <tr><td>8</td><td>Jb Barnhill / 74</td><td>Hyde Park Schools</td><td></td></tr>
+                <tr><td>9</td><td>Gage Baskett / 59</td><td>Regents</td><td></td></tr>
+                <tr><td>10</td><td>Lucia Jehring / 56</td><td>St. Theresa</td><td></td></tr>
+                                                    
             </tbody>
         </table>
         <a class="btn btn-primary" href="index.html" role="button">Return to PSIA Home Page</a>
