--- a/Mathematics -- 6.html
+++ b/Mathematics -- 6.html
@@ -22,8 +22,17 @@
         <table class="table table-primary table-striped table-bordered border-primary" border="3">
             <tbody>
                 <!-- Add Table entries here -->
-
-                                     
+                <tr><th>Rank</th><th>Name</th><th>School</th><th>StateQualifer</th></tr>
+                <tr><td>1</td><td>Harrisonne Wu / 212</td><td>Regents</td><td>STATE QUALIFIER</td></tr>
+                <tr><td>2</td><td>Noah Ledbetter / 126</td><td>Regents</td><td>STATE QUALIFIER</td></tr>
+                <tr><td>3</td><td>Brendan Bils / 121</td><td>St. Theresa</td><td></td></tr>
+                <tr><td>4</td><td>Presley Kuo / 103</td><td>St. Andrews</td><td></td></tr>
+                <tr><td>5</td><td>Tyler Farrens / 41</td><td>St. Theresa</td><td></td></tr>
+                <tr><td>6 TIE</td><td>Alexander Boecking / 39</td><td>St. Theresa</td><td></td></tr>
+                <tr><td>6 TIE</td><td>Jack Kenyon / 39</td><td>St. Gabriels</td><td></td></tr>
+                <tr><td>8</td><td>Max Kantor / 35</td><td>St. Gabriels</td><td></td></tr>
+                <tr><td>9</td><td>Elena Franta / 21</td><td>Regents</td><td></td></tr>
+                                                    
             </tbody>
         </table>
         <a class="btn btn-primary" href="index.html" role="button">Return to PSIA Home Page</a>
