--- a/Mathematics -- 7.html
+++ b/Mathematics -- 7.html
@@ -22,8 +22,14 @@
         <table class="table table-primary table-striped table-bordered border-primary" border="3">
             <tbody>
                 <!-- Add Table entries here -->
-
-                                     
+                <tr><th>Rank</th><th>Name</th><th>School</th><th>StateQualifer</th></tr>
+                <tr><td>1</td><td>Keri Collins / 229</td><td>Regents</td><td>STATE QUALIFIER</td></tr>
+                <tr><td>2</td><td>Andrew Rosen / 154</td><td>St. Theresa</td><td>STATE QUALIFIER</td></tr>
+                <tr><td>3</td><td>Stella Li / 126</td><td>St. Theresa</td><td></td></tr>
+                <tr><td>4</td><td>Sage Dargis / 83</td><td>St. Gabriels</td><td></td></tr>
+                <tr><td>5</td><td>Nash Dahl / 68</td><td>St. Theresa</td><td></td></tr>
+                <tr><td>6</td><td>Camden Peters / 64</td><td>Regents</td><td></td></tr>
+                                                    
             </tbody>
         </table>
         <a class="btn btn-primary" href="index.html" role="button">Return to PSIA Home Page</a>
