--- a/Modern Oratory -- 7,8.html
+++ b/Modern Oratory -- 7,8.html
@@ -22,8 +22,11 @@
         <table class="table table-primary table-striped table-bordered border-primary" border="3">
             <tbody>
                 <!-- Add Table entries here -->
-
-                                     
+                <tr><th>Rank</th><th>Name</th><th>School</th><th>StateQualifer</th></tr>
+                <tr><td>1</td><td>Jacob Govea</td><td>Regents</td><td>STATE QUALIFIER</td></tr>
+                <tr><td>2</td><td>Jannae Ailawadhi</td><td>Regents</td><td></td></tr>
+                <tr><td>3</td><td>Zara Franta</td><td>Regents</td><td></td></tr>
+                                                    
             </tbody>
         </table>
         <a class="btn btn-primary" href="index.html" role="button">Return to PSIA Home Page</a>
