--- a/Music Memory -- 3,4.html
+++ b/Music Memory -- 3,4.html
@@ -22,8 +22,14 @@
         <table class="table table-primary table-striped table-bordered border-primary" border="3">
             <tbody>
                 <!-- Add Table entries here -->
-
-                                     
+                <tr><th>Rank</th><th>Name</th><th>School</th><th>StateQualifer</th></tr>
+                <tr><td>1</td><td>Jayden Kim / 244</td><td>St. Gabriels</td><td>STATE QUALIFIER</td></tr>
+                <tr><td>2</td><td>Sophia Holland / 204</td><td>Trinity</td><td>STATE QUALIFIER</td></tr>
+                <tr><td>3</td><td>Juliet Dalzell-payne / 184</td><td>St. Gabriels</td><td></td></tr>
+                <tr><td>4</td><td>Caroline Holden / 113</td><td>Trinity</td><td></td></tr>
+                <tr><td>5</td><td>Martha Castaldi / 42</td><td>St. Theresa</td><td></td></tr>
+                <tr><td>6</td><td>Adrian Boecking / 28</td><td>St. Theresa</td><td></td></tr>
+                                                   
             </tbody>
         </table>
         <a class="btn btn-primary" href="index.html" role="button">Return to PSIA Home Page</a>
