--- a/Number Sense -- 4.html
+++ b/Number Sense -- 4.html
@@ -22,8 +22,18 @@
         <table class="table table-primary table-striped table-bordered border-primary" border="3">
             <tbody>
                 <!-- Add Table entries here -->
-
-                                     
+                <tr><th>Rank</th><th>Name</th><th>School</th><th>StateQualifer</th></tr>
+                <tr><td>1</td><td>Benjamin Choi / 222</td><td>St. Gabriels</td><td>STATE QUALIFIER</td></tr>
+                <tr><td>2</td><td>Nicholas Smith / 165</td><td>Regents</td><td>STATE QUALIFIER</td></tr>
+                <tr><td>3</td><td>Aadhya Karthik / 135</td><td>Karthik </td><td></td></tr>
+                <tr><td>4</td><td>Nathan Hartadinata / 120</td><td>St. Theresa</td><td></td></tr>
+                <tr><td>5</td><td>Beckham Chodniewicz / 92</td><td>Regents</td><td></td></tr>
+                <tr><td>6</td><td>Elena Snyder / 90</td><td>St. Gabriels</td><td></td></tr>
+                <tr><td>7</td><td>Gage Baskett / 68</td><td>Regents</td><td></td></tr>
+                <tr><td>8</td><td>Jp Hudson / 59</td><td>St. Andrews</td><td></td></tr>
+                <tr><td>9</td><td>Beckham Simmons / 45</td><td>Trinity</td><td></td></tr>
+                <tr><td>10</td><td>Nicolas Sharma / 40</td><td>St. Theresa</td><td></td></tr>
+                                                    
             </tbody>
         </table>
         <a class="btn btn-primary" href="index.html" role="button">Return to PSIA Home Page</a>
