--- a/Number Sense -- 5.html
+++ b/Number Sense -- 5.html
@@ -22,8 +22,13 @@
         <table class="table table-primary table-striped table-bordered border-primary" border="3">
             <tbody>
                 <!-- Add Table entries here -->
-
-                                     
+                <tr><th>Rank</th><th>Name</th><th>School</th><th>StateQualifer</th></tr>
+                <tr><td>1</td><td>Julia Ridgeway / 222</td><td>St. Theresa</td><td>STATE QUALIFIER</td></tr>
+                <tr><td>2</td><td>Charlie Roy / 84</td><td>Regents</td><td>STATE QUALIFIER</td></tr>
+                <tr><td>3</td><td>Aiden Berkowitz / 69</td><td>St. Theresa</td><td></td></tr>
+                <tr><td>4</td><td>Emma Urrutia / 55</td><td>St. Theresa</td><td></td></tr>
+                <tr><td>5</td><td>Rowan Marek / 23</td><td>Hyde Park Schools</td><td></td></tr>
+                                                   
             </tbody>
         </table>
         <a class="btn btn-primary" href="index.html" role="button">Return to PSIA Home Page</a>
