--- a/Number Sense -- 6.html
+++ b/Number Sense -- 6.html
@@ -22,8 +22,12 @@
         <table class="table table-primary table-striped table-bordered border-primary" border="3">
             <tbody>
                 <!-- Add Table entries here -->
-
-                                     
+                <tr><th>Rank</th><th>Name</th><th>School</th><th>StateQualifer</th></tr>
+                <tr><td>1</td><td>Harrisonne Wu / 228</td><td>Regents</td><td>STATE QUALIFIER</td></tr>
+                <tr><td>2</td><td>Brendan Bils / 185</td><td>St. Theresa</td><td>STATE QUALIFIER</td></tr>
+                <tr><td>3</td><td>Logan Gonzalez / 78</td><td>St. Theresa</td><td></td></tr>
+                <tr><td>4</td><td>Mariola Rodriguez / 49</td><td>St. Theresa</td><td></td></tr>
+                                                   
             </tbody>
         </table>
         <a class="btn btn-primary" href="index.html" role="button">Return to PSIA Home Page</a>
