--- a/On-site Drawing -- 6.html
+++ b/On-site Drawing -- 6.html
@@ -22,8 +22,15 @@
         <table class="table table-primary table-striped table-bordered border-primary" border="3">
             <tbody>
                 <!-- Add Table entries here -->
-
-                                     
+                <tr><th>Rank</th><th>Name</th><th>School</th><th>StateQualifer</th></tr>
+                <tr><td>1</td><td>Kiana Stokes</td><td>Regents</td><td>STATE QUALIFIER</td></tr>
+                <tr><td>2</td><td>Ella Stewart</td><td>St. Theresa</td><td>STATE QUALIFIER</td></tr>
+                <tr><td>3</td><td>Sydney Archer</td><td>St. Theresa</td><td></td></tr>
+                <tr><td>4</td><td>Tyler Farrens</td><td>St. Theresa</td><td></td></tr>
+                <tr><td>5</td><td>Danielle Nowzaradan</td><td>Regents</td><td></td></tr>
+                <tr><td>6</td><td>Cate Bradley</td><td>Trinity</td><td></td></tr>
+                <tr><td>7</td><td>Caleb Kim</td><td>Regents</td><td></td></tr>
+                                                    
             </tbody>
         </table>
         <a class="btn btn-primary" href="index.html" role="button">Return to PSIA Home Page</a>
