--- a/On-site Drawing -- 7.html
+++ b/On-site Drawing -- 7.html
@@ -22,8 +22,13 @@
         <table class="table table-primary table-striped table-bordered border-primary" border="3">
             <tbody>
                 <!-- Add Table entries here -->
-
-                                     
+                <tr><th>Rank</th><th>Name</th><th>School</th><th>StateQualifer</th></tr>
+                <tr><td>1</td><td>Zaina Khattery</td><td>St. Andrews</td><td>STATE QUALIFIER</td></tr>
+                <tr><td>2</td><td>Alex Stumpf</td><td>St. Andrews</td><td>STATE QUALIFIER</td></tr>
+                <tr><td>3</td><td>Ava Hanners</td><td>St. Andrews</td><td></td></tr>
+                <tr><td>4</td><td>Elenora Fristch</td><td>Regents</td><td></td></tr>
+                <tr><td>5</td><td>Maddie Kurian</td><td>St. Theresa</td><td></td></tr>
+                <tr><td>6</td><td>Marygrace Beinke</td><td>Trinity</td><td></td></tr>
             </tbody>
         </table>
         <a class="btn btn-primary" href="index.html" role="button">Return to PSIA Home Page</a>
