--- a/On-site Drawing -- 8.html
+++ b/On-site Drawing -- 8.html
@@ -22,8 +22,15 @@
         <table class="table table-primary table-striped table-bordered border-primary" border="3">
             <tbody>
                 <!-- Add Table entries here -->
-
-                                     
+                <tr><th>Rank</th><th>Name</th><th>School</th><th>StateQualifer</th></tr>
+                <tr><td>1</td><td>Emily Fletcher</td><td>St. Theresa</td><td>STATE QUALIFIER</td></tr>
+                <tr><td>2</td><td>Bridget Baile</td><td>St. Theresa</td><td>STATE QUALIFIER</td></tr>
+                <tr><td>3</td><td>Jessica Barnett</td><td>Hyde Park Schools</td><td></td></tr>
+                <tr><td>4</td><td>Liana Manchala</td><td>Regents</td><td></td></tr>
+                <tr><td>5</td><td>Lilly Broaddus</td><td>Trinity</td><td></td></tr>
+                <tr><td>6</td><td>Caitlin Wilkes</td><td>Trinity</td><td></td></tr>
+                <tr><td>7</td><td>Cooper Falk</td><td>Trinity</td><td></td></tr>
+                                                    
             </tbody>
         </table>
         <a class="btn btn-primary" href="index.html" role="button">Return to PSIA Home Page</a>
