--- a/Poetry Interpretation -- 5.html
+++ b/Poetry Interpretation -- 5.html
@@ -22,8 +22,13 @@
         <table class="table table-primary table-striped table-bordered border-primary" border="3">
             <tbody>
                 <!-- Add Table entries here -->
-
-                                     
+                <tr><th>Rank</th><th>Name</th><th>School</th><th>StateQualifer</th></tr>
+                <tr><td>1</td><td>Charlotte Cone</td><td>Hyde Park Schools</td><td>STATE QUALIFIER</td></tr>
+                <tr><td>2</td><td>Macy Krieg</td><td>Regents</td><td>STATE QUALIFIER</td></tr>
+                <tr><td>3</td><td>Hannah Davis</td><td>Regents</td><td></td></tr>
+                <tr><td>4</td><td>Eleanor Thome</td><td>St. Gabriels</td><td></td></tr>
+                <tr><td>5</td><td>Mayzie Moore</td><td>Regents</td><td></td></tr>
+                                                    
             </tbody>
         </table>
         <a class="btn btn-primary" href="index.html" role="button">Return to PSIA Home Page</a>
