--- a/Ready Writing -- 4.html
+++ b/Ready Writing -- 4.html
@@ -22,8 +22,14 @@
         <table class="table table-primary table-striped table-bordered border-primary" border="3">
             <tbody>
                 <!-- Add Table entries here -->
-
-                                     
+                <tr><th>Rank</th><th>Name</th><th>School</th><th>StateQualifer</th></tr>
+                <tr><td>1</td><td>Ann Dunaway</td><td>Regents</td><td>STATE QUALIFIER</td></tr>
+                <tr><td>2</td><td>Anne Adams</td><td>Regents</td><td>STATE QUALIFIER</td></tr>
+                <tr><td>3</td><td>Aadhya Karthik</td><td>Karthik </td><td></td></tr>
+                <tr><td>4</td><td>Ivey Peck</td><td>Hyde Park Schools</td><td></td></tr>
+                <tr><td>5</td><td>Zoey Zhang</td><td>Hyde Park Schools</td><td></td></tr>
+                <tr><td>6</td><td>Benjamin Choi</td><td>St. Gabriels</td><td></td></tr>
+                                                    
             </tbody>
         </table>
         <a class="btn btn-primary" href="index.html" role="button">Return to PSIA Home Page</a>
