--- a/Ready Writing -- 5.html
+++ b/Ready Writing -- 5.html
@@ -22,8 +22,18 @@
         <table class="table table-primary table-striped table-bordered border-primary" border="3">
             <tbody>
                 <!-- Add Table entries here -->
-
-                                     
+                <tr><th>Rank</th><th>Name</th><th>School</th><th>StateQualifer</th></tr>
+                <tr><td>1</td><td>Naomi Barton</td><td>St. Gabriels</td><td>STATE QUALIFIER</td></tr>
+                <tr><td>2</td><td>Campbell Queen</td><td>St. Andrews</td><td>STATE QUALIFIER</td></tr>
+                <tr><td>3</td><td>Macy Krieg</td><td>Regents</td><td></td></tr>
+                <tr><td>4</td><td>Adelynn Zimmerman</td><td>St. Andrews</td><td></td></tr>
+                <tr><td>5</td><td>Hudson Dahl</td><td>St. Theresa</td><td></td></tr>
+                <tr><td>6</td><td>Julia Ridgeway</td><td>St. Theresa</td><td></td></tr>
+                <tr><td>7</td><td>Amanda Tavares</td><td>St. Theresa</td><td></td></tr>
+                <tr><td>8</td><td>Ainsley Jones</td><td>St. Andrews</td><td></td></tr>
+                <tr><td>9</td><td>Hannah Davis</td><td>Regents</td><td></td></tr>
+                <tr><td>10</td><td>Hailey Chaplin</td><td>Hyde Park Schools</td><td></td></tr>
+                                                    
             </tbody>
         </table>
         <a class="btn btn-primary" href="index.html" role="button">Return to PSIA Home Page</a>
