--- a/Ready Writing -- 6.html
+++ b/Ready Writing -- 6.html
@@ -22,8 +22,12 @@
         <table class="table table-primary table-striped table-bordered border-primary" border="3">
             <tbody>
                 <!-- Add Table entries here -->
-
-                                     
+                <tr><th>Rank</th><th>Name</th><th>School</th><th>StateQualifer</th></tr>
+                <tr><td>1</td><td>Caroline Masterson</td><td>Trinity</td><td>STATE QUALIFIER</td></tr>
+                <tr><td>2</td><td>Ella Stewart</td><td>St. Theresa</td><td>STATE QUALIFIER</td></tr>
+                <tr><td>3</td><td>Fiona Kaley</td><td>St. Theresa</td><td></td></tr>
+                <tr><td>4</td><td>Logan Gonzalez</td><td>St. Theresa</td><td></td></tr>
+                                                   
             </tbody>
         </table>
         <a class="btn btn-primary" href="index.html" role="button">Return to PSIA Home Page</a>
