--- a/Ready Writing -- 8.html
+++ b/Ready Writing -- 8.html
@@ -22,8 +22,13 @@
         <table class="table table-primary table-striped table-bordered border-primary" border="3">
             <tbody>
                 <!-- Add Table entries here -->
-
-                                     
+                <tr><th>Rank</th><th>Name</th><th>School</th><th>StateQualifer</th></tr>
+                <tr><td>1</td><td>Bridget Baile</td><td>St. Theresa</td><td>STATE QUALIFIER</td></tr>
+                <tr><td>2</td><td>Keri Collins</td><td>Regents</td><td>STATE QUALIFIER</td></tr>
+                <tr><td>3</td><td>Ella Gonzalez</td><td>St. Theresa</td><td></td></tr>
+                <tr><td>4</td><td>Yash Date</td><td>Trinity</td><td></td></tr>
+                <tr><td>5</td><td>Patrick Hubert</td><td>St. Theresa</td><td></td></tr>
+                                                    
             </tbody>
         </table>
         <a class="btn btn-primary" href="index.html" role="button">Return to PSIA Home Page</a>
