--- a/Science -- 6.html
+++ b/Science -- 6.html
@@ -22,8 +22,12 @@
         <table class="table table-primary table-striped table-bordered border-primary" border="3">
             <tbody>
                 <!-- Add Table entries here -->
-
-                                     
+                <tr><th>Rank</th><th>Name</th><th>School</th><th>StateQualifer</th></tr>
+                <tr><td>1</td><td>Quinn Evans / 173</td><td>Trinity</td><td>STATE QUALIFIER</td></tr>
+                <tr><td>2</td><td>Caroline Newby / 106</td><td>Trinity</td><td>STATE QUALIFIER</td></tr>
+                <tr><td>3</td><td>Henry Parks / 62</td><td>St. Theresa</td><td></td></tr>
+                <tr><td>4</td><td>Josephine Addison / 41</td><td>St. Theresa</td><td></td></tr>
+                                                    
             </tbody>
         </table>
         <a class="btn btn-primary" href="index.html" role="button">Return to PSIA Home Page</a>
