--- a/Science -- 8.html
+++ b/Science -- 8.html
@@ -22,8 +22,10 @@
         <table class="table table-primary table-striped table-bordered border-primary" border="3">
             <tbody>
                 <!-- Add Table entries here -->
-
-                                     
+                <tr><th>Rank</th><th>Name</th><th>School</th><th>StateQualifer</th></tr>
+                <tr><td>1</td><td>Stephen Szygenda / 98</td><td>St. Theresa</td><td></td></tr>
+                <tr><td>2</td><td>Tyler Jones / 74</td><td>St. Theresa</td><td></td></tr>
+                                                    
             </tbody>
         </table>
         <a class="btn btn-primary" href="index.html" role="button">Return to PSIA Home Page</a>
