--- a/Spelling -- 3.html
+++ b/Spelling -- 3.html
@@ -22,8 +22,18 @@
         <table class="table table-primary table-striped table-bordered border-primary" border="3">
             <tbody>
                 <!-- Add Table entries here -->
-
-                                     
+                <tr><th>Rank</th><th>Name</th><th>School</th><th>StateQualifer</th></tr>
+                <tr><td>1</td><td>Grayson Moles / 264</td><td>St. Theresa</td><td>STATE QUALIFIER</td></tr>
+                <tr><td>2</td><td>Andrew Piccolo / 254</td><td>St. Gabriels</td><td>STATE QUALIFIER</td></tr>
+                <tr><td>3 TIE</td><td>Elizabeth Kim / 235</td><td>Regents</td><td></td></tr>
+                <tr><td>3 TIE</td><td>Henry Kennedy / 235</td><td>St. Andrews</td><td></td></tr>
+                <tr><td>5</td><td>Magnolia Lipstein / 227</td><td>Trinity</td><td></td></tr>
+                <tr><td>6</td><td>Miles Erlanson / 223</td><td>St. Andrews</td><td></td></tr>
+                <tr><td>7</td><td>Larsen de Waal / 213</td><td>St. Gabriels</td><td></td></tr>
+                <tr><td>8</td><td>Anita Vemulapalli / 212</td><td>St. Andrews</td><td></td></tr>
+                <tr><td>9</td><td>Blake Dennison / 209</td><td>Trinity</td><td></td></tr>
+                <tr><td>10</td><td>Matthew Engesser / 204</td><td>St. Theresa</td><td></td></tr>
+                                                    
             </tbody>
         </table>
         <a class="btn btn-primary" href="index.html" role="button">Return to PSIA Home Page</a>
