--- a/Spelling -- 4.html
+++ b/Spelling -- 4.html
@@ -22,8 +22,18 @@
         <table class="table table-primary table-striped table-bordered border-primary" border="3">
             <tbody>
                 <!-- Add Table entries here -->
-
-                                     
+                <tr><th>Rank</th><th>Name</th><th>School</th><th>StateQualifer</th></tr>
+                <tr><td>1</td><td>Cora Sanders / 352</td><td>Trinity</td><td>STATE QUALIFIER</td></tr>
+                <tr><td>2</td><td>Amelia Brandon / 308</td><td>St. Andrews</td><td>STATE QUALIFIER</td></tr>
+                <tr><td>3</td><td>Ashley Dunaway / 286</td><td>Regents</td><td></td></tr>
+                <tr><td>4</td><td>William Chaffee / 277</td><td>Hyde Park Schools</td><td></td></tr>
+                <tr><td>5</td><td>Miguel Hochman / 253</td><td>Trinity</td><td></td></tr>
+                <tr><td>6</td><td>Emma Mcinerney / 245</td><td>Hyde Park Schools</td><td></td></tr>
+                <tr><td>7</td><td>Gage Baskett / 241</td><td>Regents</td><td></td></tr>
+                <tr><td>8</td><td>Joe Terry / 238</td><td>St. Theresa</td><td></td></tr>
+                <tr><td>9</td><td>Hannah Parks / 203</td><td>St. Theresa</td><td></td></tr>
+                <tr><td>10</td><td>Caden Fitzpatrick / 201</td><td>Hyde Park Schools</td><td></td></tr>
+                                                    
             </tbody>
         </table>
         <a class="btn btn-primary" href="index.html" role="button">Return to PSIA Home Page</a>
