--- a/Spelling -- 6.html
+++ b/Spelling -- 6.html
@@ -22,8 +22,14 @@
         <table class="table table-primary table-striped table-bordered border-primary" border="3">
             <tbody>
                 <!-- Add Table entries here -->
-
-                                     
+                <tr><th>Rank</th><th>Name</th><th>School</th><th>StateQualifer</th></tr>
+                <tr><td>1</td><td>Luca Torres / 428</td><td>Regents</td><td>STATE QUALIFIER</td></tr>
+                <tr><td>2</td><td>Ella Stewart / 410</td><td>St. Theresa</td><td>STATE QUALIFIER</td></tr>
+                <tr><td>3</td><td>Matthew Mcinerney / 391</td><td>Hyde Park Schools</td><td></td></tr>
+                <tr><td>4</td><td>Henry Parks / 287</td><td>St. Theresa</td><td></td></tr>
+                <tr><td>5</td><td>Josephine Addison / 188</td><td>St. Theresa</td><td></td></tr>
+                <tr><td>6</td><td>Caroline Masterson / 187</td><td>Trinity</td><td></td></tr>
+                                                    
             </tbody>
         </table>
         <a class="btn btn-primary" href="index.html" role="button">Return to PSIA Home Page</a>
