--- a/Spelling -- 7,8.html
+++ b/Spelling -- 7,8.html
@@ -22,8 +22,18 @@
         <table class="table table-primary table-striped table-bordered border-primary" border="3">
             <tbody>
                 <!-- Add Table entries here -->
-
-                                     
+                <tr><th>Rank</th><th>Name</th><th>School</th><th>StateQualifer</th></tr>
+                <tr><td>1</td><td>Emily Fletcher / 462</td><td>St. Theresa</td><td>STATE QUALIFIER</td></tr>
+                <tr><td>2</td><td>Anusha Mahbub / 461</td><td>Trinity</td><td>STATE QUALIFIER</td></tr>
+                <tr><td>3 TIE</td><td>Adrian Ching / 445</td><td>Regents</td><td></td></tr>
+                <tr><td>3 TIE</td><td>Alex Lekhakul / 445</td><td>Hyde Park Schools</td><td></td></tr>
+                <tr><td>5</td><td>James Irion / 434</td><td>St. Theresa</td><td></td></tr>
+                <tr><td>6</td><td>Massimo Altamirano / 382</td><td>St. Theresa</td><td></td></tr>
+                <tr><td>7</td><td>Bridget Baile / 360</td><td>St. Theresa</td><td></td></tr>
+                <tr><td>8</td><td>Ella Gonzalez / 348</td><td>St. Theresa</td><td></td></tr>
+                <tr><td>9</td><td>Ryan Mcdonald / 335</td><td>St. Theresa</td><td></td></tr>
+                <tr><td>10</td><td>Liana Manchala / 307</td><td>Regents</td><td></td></tr>
+                                                    
             </tbody>
         </table>
         <a class="btn btn-primary" href="index.html" role="button">Return to PSIA Home Page</a>
