--- a/Storytelling -- 1.html
+++ b/Storytelling -- 1.html
@@ -22,8 +22,14 @@
         <table class="table table-primary table-striped table-bordered border-primary" border="3">
             <tbody>
                 <!-- Add Table entries here -->
-
-                                     
+                <tr><th>Rank</th><th>Name</th><th>School</th><th>StateQualifer</th></tr>
+                <tr><td>1</td><td>Henry Waldron</td><td>Trinity</td><td>STATE QUALIFIER</td></tr>
+                <tr><td>2</td><td>David Butler</td><td>Regents</td><td></td></tr>
+                <tr><td>3</td><td>Ava Singletary</td><td>Trinity</td><td></td></tr>
+                <tr><td>4</td><td>Ellie Funderburg</td><td>St. Andrews</td><td></td></tr>
+                <tr><td>5</td><td>Sarah Dartt</td><td>St. Gabriels</td><td></td></tr>
+                <tr><td>6</td><td>Olivia Westbrook</td><td>St. Gabriels</td><td></td></tr>
+                                                    
             </tbody>
         </table>
         <a class="btn btn-primary" href="index.html" role="button">Return to PSIA Home Page</a>
