--- a/Storytelling -- 2.html
+++ b/Storytelling -- 2.html
@@ -22,8 +22,14 @@
         <table class="table table-primary table-striped table-bordered border-primary" border="3">
             <tbody>
                 <!-- Add Table entries here -->
-
-                                     
+                <tr><th>Rank</th><th>Name</th><th>School</th><th>StateQualifer</th></tr>
+                <tr><td>1</td><td>Kendall Owen</td><td>Regents</td><td>STATE QUALIFIER</td></tr>
+                <tr><td>2</td><td>Annsley Moore</td><td>Regents</td><td></td></tr>
+                <tr><td>3</td><td>Amina Reaves</td><td>Trinity</td><td></td></tr>
+                <tr><td>4</td><td>Alida Hudson</td><td>St. Theresa</td><td></td></tr>
+                <tr><td>5</td><td>Zain Bhiwandiwala</td><td>St. Andrews</td><td></td></tr>
+                <tr><td>6</td><td>Lucy Sitz</td><td>St. Andrews</td><td></td></tr>
+                                                    
             </tbody>
         </table>
         <a class="btn btn-primary" href="index.html" role="button">Return to PSIA Home Page</a>
