--- a/Vocabulary -- 6.html
+++ b/Vocabulary -- 6.html
@@ -22,8 +22,13 @@
         <table class="table table-primary table-striped table-bordered border-primary" border="3">
             <tbody>
                 <!-- Add Table entries here -->
-
-                                     
+                <tr><th>Rank</th><th>Name</th><th>School</th><th>StateQualifer</th></tr>
+                <tr><td>1</td><td>Presley Kuo / 117</td><td>St. Andrews</td><td>STATE QUALIFIER</td></tr>
+                <tr><td>2</td><td>Caroline Newby / 86</td><td>Trinity</td><td>STATE QUALIFIER</td></tr>
+                <tr><td>3</td><td>Quinn Evans / 80</td><td>Trinity</td><td></td></tr>
+                <tr><td>4</td><td>Henry Parks / 66</td><td>St. Theresa</td><td></td></tr>
+                <tr><td>5</td><td>Matthew Mcinerney / 59</td><td>Hyde Park Schools</td><td></td></tr>
+                <tr><td>6</td><td>Josephine Addison / 38</td><td>St. Theresa</td><td></td></tr>
             </tbody>
         </table>
         <a class="btn btn-primary" href="index.html" role="button">Return to PSIA Home Page</a>
