--- a/Vocabulary -- 7,8.html
+++ b/Vocabulary -- 7,8.html
@@ -22,8 +22,17 @@
         <table class="table table-primary table-striped table-bordered border-primary" border="3">
             <tbody>
                 <!-- Add Table entries here -->
-
-                                     
+                <tr><th>Rank</th><th>Name</th><th>School</th><th>StateQualifer</th></tr>
+                <tr><td>1</td><td>Keri Collins / 122</td><td>Regents</td><td>STATE QUALIFIER</td></tr>
+                <tr><td>2</td><td>Anna Wayne / 101</td><td>St. Andrews</td><td>STATE QUALIFIER</td></tr>
+                <tr><td>3</td><td>Ella Gonzalez / 89</td><td>St. Theresa</td><td></td></tr>
+                <tr><td>4 TIE</td><td>Adrian Ching / 80</td><td>Regents</td><td></td></tr>
+                <tr><td>4 TIE</td><td>Marygrace Beinke / 80</td><td>Trinity</td><td></td></tr>
+                <tr><td>6</td><td>Emily Fletcher / 71</td><td>St. Theresa</td><td></td></tr>
+                <tr><td>7</td><td>Patrick Hubert / 53</td><td>St. Theresa</td><td></td></tr>
+                <tr><td>8</td><td>Nicholas Shilling / 32</td><td>St. Theresa</td><td></td></tr>
+                <tr><td>9</td><td>James Irion / 11</td><td>St. Theresa</td><td></td></tr>
+                                                    
             </tbody>
         </table>
         <a class="btn btn-primary" href="index.html" role="button">Return to PSIA Home Page</a>
