--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                         <ul class="dropdown-menu">
                             <li><a class="nav-link" href="Music Memory -- 3,4.html">Music Memory -- 3,4</a></li>
                             <li><a class="nav-link" href="Music Memory -- 5,6.html">Music Memory -- 5,6</a></li>
-                            <li><a class="nav-link" href="Music Memory -- 7,8.html">Music Memory -- 7,8</a></li>
+                            <li><a class="nav-link disabled" href="Music Memory -- 7,8.html">Music Memory -- 7,8</a></li>
                         </ul>
                     </li> 
 
